--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
@@ -39,9 +38,10 @@
   "devDependencies": {
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
-    "@upleveled/eslint-config-upleveled": "1.5.15",
+    "@upleveled/eslint-config-upleveled": "1.6.0",
     "babel-eslint": "^10.0.0",
     "eslint": "^7.5.0",
     "eslint-config-react-app": "6.0.0",
